--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -27,4 +27,13 @@
 	URL = {https://science.sciencemag.org/content/348/6239/1130},
 	eprint = {https://science.sciencemag.org/content/348/6239/1130.full.pdf},
 	journal = {Science}
+},
+@data{DVN/TDOAPG_2020,
+author = {Messing, Solomon and DeGregorio, Christina and Hillenbrand, Bennett and King, Gary and Mahanti, Saurav and Mukerjee, Zagreb and Nayak, Chaya and Persily, Nate and State, Bogdan and Wilkins, Arjun},
+publisher = {Harvard Dataverse},
+title = {{Facebook Privacy-Protected Full URLs Data Set}},
+year = {2020},
+version = {V6},
+doi = {10.7910/DVN/TDOAPG},
+url = {https://doi.org/10.7910/DVN/TDOAPG}
 }
