--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -1,3 +1,4 @@
+% Encoding: UTF-8
 @article{10.1111/j.1083-6101.2007.00393.x,
     author = {boyd, danah m. and Ellison, Nicole B.},
     title = "{Social Network Sites: Definition, History, and Scholarship}",
@@ -28,12 +29,70 @@
 	eprint = {https://science.sciencemag.org/content/348/6239/1130.full.pdf},
 	journal = {Science}
 },
-@data{DVN/TDOAPG_2020,
-author = {Messing, Solomon and DeGregorio, Christina and Hillenbrand, Bennett and King, Gary and Mahanti, Saurav and Mukerjee, Zagreb and Nayak, Chaya and Persily, Nate and State, Bogdan and Wilkins, Arjun},
-publisher = {Harvard Dataverse},
-title = {{Facebook Privacy-Protected Full URLs Data Set}},
-year = {2020},
-version = {V6},
-doi = {10.7910/DVN/TDOAPG},
-url = {https://doi.org/10.7910/DVN/TDOAPG}
+
+@Data{DVN/TDOAPG_2020,
+  author    = {Messing, Solomon and DeGregorio, Christina and Hillenbrand, Bennett and King, Gary and Mahanti, Saurav and Mukerjee, Zagreb and Nayak, Chaya and Persily, Nate and State, Bogdan and Wilkins, Arjun},
+  doi       = {10.7910/DVN/TDOAPG},
+  publisher = {Harvard Dataverse},
+  title     = {{Facebook Privacy-Protected Full URLs Data Set}},
+  url       = {https://doi.org/10.7910/DVN/TDOAPG},
+  version   = {V6},
+  year      = {2020},
 }
+
+@Manual{pycrowdtangle,
+  title  = {A Python Wrapper To Retrieve Data From The CrowdTangle API},
+  author = {{UPB Social ScienceOne}},
+  month  = dec,
+  year   = {2020},
+  url    = {https://github.com/UPB-SS1/PyCrowdTangle},
+}
+
+@Manual{pycoornet,
+  title  = {A data analysis tool to detect coordinated link sharing behavior on social media},
+  author = {{UPB Social ScienceOne}},
+  month  = dec,
+  year   = {2020},
+  url    = {https://github.com/UPB-SS1/PyCooRnet},
+}
+
+@Manual{crowdtangle,
+  title  = {CrowdTangle. Facebook, Menlo Park, California, United States.},
+  author = {{CrowdTangle Team}},
+  month  = dec,
+  year   = {2020},
+  url    = {https://www.crowdtangle.com/},
+}
+
+@paper{ICWSM09154,
+author = {Mathieu Bastian and Sebastien Heymann and Mathieu Jacomy},
+title = {Gephi: An Open Source Software for Exploring and Manipulating Networks},
+conference = {International AAAI Conference on Weblogs and Social Media},
+year = {2009},
+keywords = {network;network science;visualization;graph exploration;open source;free software;dynamic network;interactive interface;graph;force vector;java;OpenGL;3-D visualization;user-centric;graph layout;complex graph rendering;network analysis;webatlas},
+abstract = {Gephi is an open source software for graph and network analysis. It uses a 3D render engine to display large networks in real-time and to speed up the exploration. A flexible and multi-task architecture brings new possibilities to work with complex data sets and produce valuable visual results. We present several key features of Gephi in the context of interactive exploration and interpretation of networks. It provides easy and broad access to network data and allows for spatializing, filtering, navigating, manipulating and clustering. Finally, by presenting dynamic features of Gephi, we highlight key aspects of dynamic network visualization.},
+url = {http://www.aaai.org/ocs/index.php/ICWSM/09/paper/view/154}
+}
+
+@Article{Giglietto2020,
+  author  = {Giglietto, Fabio and Righetti, Nicola and Rossi, Luca and Marino, Giada},
+  journal = {Information, Communication & Society},
+  title   = {It takes a village to manipulate the media: coordinated link sharing behavior during 2018 and 2019 Italian elections},
+  year    = {2020},
+  month   = {03},
+  pages   = {1-25},
+  volume  = {23},
+  doi     = {10.1080/1369118X.2020.1739732},
+}
+
+@Article{Blondel2008,
+  author  = {Blondel, Vincent and Guillaume, Jean-Loup and Lambiotte, Renaud and Lefebvre, Etienne},
+  journal = {Journal of Statistical Mechanics Theory and Experiment},
+  title   = {Fast Unfolding of Communities in Large Networks},
+  year    = {2008},
+  month   = {04},
+  volume  = {2008},
+  doi     = {10.1088/1742-5468/2008/10/P10008},
+}
+
+@Comment{jabref-meta: databaseType:bibtex;}
