--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -64,6 +64,14 @@
   url    = {https://www.crowdtangle.com/},
 }
 
+@Manual{pythonrank,
+  title  = {Pandas DataFrame: rank() function},
+  author = {{w3resource}},
+  month  = dec,
+  year   = {2020},
+  url    = {https://www.w3resource.com/pandas/dataframe/dataframe-rank.php},
+}
+
 @paper{ICWSM09154,
 author = {Mathieu Bastian and Sebastien Heymann and Mathieu Jacomy},
 title = {Gephi: An Open Source Software for Exploring and Manipulating Networks},
