--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -56,18 +56,18 @@
   url    = {https://github.com/UPB-SS1/PyCooRnet},
 }
 
-@Manual{crowdtangle,
-  title  = {CrowdTangle. Facebook, Menlo Park, California, United States.},
+@Misc{crowdtangle,
   author = {{CrowdTangle Team}},
   month  = dec,
+  title  = {CrowdTangle. Facebook, Menlo Park, California, United States.},
   year   = {2020},
   url    = {https://www.crowdtangle.com/},
 }
 
-@Manual{pythonrank,
-  title  = {Pandas DataFrame: rank() function},
+@Misc{pythonrank,
   author = {{w3resource}},
   month  = dec,
+  title  = {Pandas DataFrame: rank() function},
   year   = {2020},
   url    = {https://www.w3resource.com/pandas/dataframe/dataframe-rank.php},
 }
@@ -101,6 +101,49 @@ url = {http://www.aaai.org/ocs/index.php/ICWSM/09/paper/view/154}
   month   = {04},
   volume  = {2008},
   doi     = {10.1088/1742-5468/2008/10/P10008},
+}
+
+@Misc{facebook,
+  author = {Facebook},
+  month  = dec,
+  title  = {Facebook},
+  year   = {2020},
+  url    = {https://facebook.com},
+}
+
+@Article{8713992,
+  author  = {Usama, Muhammad and Qadir, Junaid and Raza, Aunn and Arif, Hunain and Yau, Kok-lim Alvin and Elkhatib, Yehia and Hussain, Amir and Al-Fuqaha, Ala},
+  journal = {IEEE Access},
+  title   = {Unsupervised Machine Learning for Networking: Techniques, Applications and Research Challenges},
+  year    = {2019},
+  pages   = {65579-65615},
+  volume  = {7},
+  doi     = {10.1109/ACCESS.2019.2916648},
+}
+
+@Article{Giglietto2019,
+  author = {Giglietto, Fabio and Righetti, Nicola and Marino, Giada},
+  title  = {Understanding Coordinated and Inauthentic Link Sharing Behavior on Facebook in the Run-up of 2018 General Election and 2019 European Election in Italy},
+  year   = {2019},
+  month  = {09},
+  doi    = {10.31235/osf.io/3jteh},
+}
+
+@Misc{Gleicher2018,
+  author       = {Nathaniel Gleicher},
+  howpublished = {Web Page},
+  month        = dec,
+  title        = {Coordinated Inauthentic Behavior Explained},
+  year         = {2018},
+  url          = {https://about.fb.com/news/2018/12/inside-feed-coordinated-inauthentic-behavior/},
+}
+
+@Misc{Bolivariana2021,
+  author = {Universidad Pontificia Bolivariana},
+  month  = dec,
+  title  = {Social Media Behaviour Project},
+  year   = {2021},
+  url    = {https://upb-ss1.github.io/},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
