--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -146,4 +146,13 @@ url = {http://www.aaai.org/ocs/index.php/ICWSM/09/paper/view/154}
   url    = {https://upb-ss1.github.io/},
 }
 
+@Manual{BernersLee1994,
+  title        = {RFC 1738 Uniform Resource Locators (URL)},
+  author       = {Berners-Lee, Masinter & McCahillerners-Lee, Masinter & McCahill},
+  month        = dec,
+  organization = {University of Minesotta},
+  year         = {1994},
+  url          = {https://tools.ietf.org/html/rfc1738},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
