update ipynb to v0.2.25

--- a/samples/pycoornet_example.ipynb
+++ b/samples/pycoornet_example.ipynb
@@ -28,7 +28,8 @@
  "cells": [
   {
    "source": [
-    "# Pycoornet Example"
+    "# Pycoornet Example\n",
+    "\n"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -125,7 +126,7 @@
    "outputs": [],
    "source": [
     "#Get links from crowdtangle\n",
-    "ct_df = crowd_tangle.get_shares(urls=links_df, url_column='clean_url', date_column='date',clean_urls=True, platforms='facebook', sleep_time=1)"
+    "ct_df = crowd_tangle.get_shares(urls=links_df, url_column='clean_url', date_column='date',clean_urls=True, platforms='facebook', sleep_time=30)"
    ]
   },
   {
@@ -134,8 +135,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "shared = Shared()\n",
-    "crowtangle_shares_df, shares_graph, q = shared.coord_shares(ct_df, clean_urls=True)"
+    "shared = Shared(ct_df)\n",
+    "crowtangle_shares_df, shares_graph, q = shared.coord_shares(clean_urls=True)"
    ]
   },
   {
@@ -217,6 +218,16 @@
    "source": [
     "top_urls_df"
    ]
+  },
+  {
+   "source": [
+    "## Acknowledgements\n",
+    "CooRnet has been developed as part of the project [Social Media Behaviour](https://upb-ss1.github.io/) research project activities.\n",
+    "\n",
+    "The project is supported by a the Social Media and Democracy Research Grants from Social Science Research Council (SSRC). Data and tools provided by Facebook."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   }
  ]
 }
