update notebook example

--- a/samples/pycoornet_example.ipynb
+++ b/samples/pycoornet_example.ipynb
@@ -10,17 +10,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3-final"
+   "version": "3.8.3"
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.8.3 64-bit ('base': conda)",
-   "metadata": {
-    "interpreter": {
-     "hash": "50a385b5d82c4f1affd589f5555ad618ac44e76932e850a47f19a69a9b46c018"
-    }
-   }
+   "name": "python383jvsc74a57bd050a385b5d82c4f1affd589f5555ad618ac44e76932e850a47f19a69a9b46c018",
+   "display_name": "Python 3.8.3 64-bit ('base': conda)"
   }
  },
  "nbformat": 4,
@@ -94,7 +89,9 @@
   },
   {
    "source": [
-    "## Get Crowdtangle information"
+    "## Get Crowdtangle information\n",
+    "\n",
+    "Coordination information will be saved in pycoornet.log file"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -116,7 +113,7 @@
    "outputs": [],
    "source": [
     "# init Crowtangle with api key\n",
-    "crowd_tangle = CrowdTangle(\"xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx\")"
+    "crowd_tangle = CrowdTangle(\"iKB4nKwdLakZbRIg2DNKhFogkN6rFurvaQRvyAhx\")"
    ]
   },
   {
@@ -126,7 +123,7 @@
    "outputs": [],
    "source": [
     "#Get links from crowdtangle\n",
-    "ct_df = crowd_tangle.get_shares(urls=links_df, url_column='clean_url', date_column='date',clean_urls=True, platforms='facebook', sleep_time=30)"
+    "ct_df = crowd_tangle.get_shares(urls=links_df, url_column='clean_url', date_column='date',clean_urls=True, platforms='facebook', sleep_time=1)"
    ]
   },
   {
@@ -136,7 +133,16 @@
    "outputs": [],
    "source": [
     "shared = Shared(ct_df)\n",
-    "crowtangle_shares_df, shares_graph, q = shared.coord_shares(clean_urls=True)"
+    "crowtangle_shares_df, shares_graph, q, coordination_interval = shared.coord_shares(clean_urls=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(f\"Coordination Time = {coordination_interval}\")"
    ]
   },
   {
@@ -178,7 +184,10 @@
     "#install plotly for the 3d network interactive plot\n",
     "import plotly.graph_objects as go\n",
     "\n",
-    "from pycoornet.utils import Utils"
+    "from pycoornet.utils import Utils\n",
+    "\n",
+    "import warnings\n",
+    "warnings.filterwarnings(\"ignore\")"
    ]
   },
   {
@@ -262,8 +271,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "norm = np.linalg.norm(strength)\n",
-    "normal_strength = strength/norm"
+    "norm = np.linalg.norm(strengths)\n",
+    "normal_strength = strengths/norm"
    ]
   },
   {
