--- a/samples/pycoornet_example.ipynb
+++ b/samples/pycoornet_example.ipynb
@@ -10,12 +10,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.8"
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python383jvsc74a57bd050a385b5d82c4f1affd589f5555ad618ac44e76932e850a47f19a69a9b46c018",
-   "display_name": "Python 3.8.3 64-bit ('base': conda)"
+   "name": "python388jvsc74a57bd09d9a4f37db30d53053d3ac742f9bade771ae6932c8b6047c37b5666298fb134d",
+   "display_name": "Python 3.8.8 64-bit ('base': conda)"
   }
  },
  "nbformat": 4,
@@ -113,7 +113,7 @@
    "outputs": [],
    "source": [
     "# init Crowtangle with api key\n",
-    "crowd_tangle = CrowdTangle(\"iKB4nKwdLakZbRIg2DNKhFogkN6rFurvaQRvyAhx\")"
+    "crowd_tangle = CrowdTangle(\"xxxxxxxxxxxxxxxxxxxxxx\")"
    ]
   },
   {
@@ -133,7 +133,7 @@
    "outputs": [],
    "source": [
     "shared = Shared(ct_df)\n",
-    "crowtangle_shares_df, shares_graph, q, coordination_interval = shared.coord_shares(clean_urls=True)"
+    "crowtangle_shares_df, shares_graph, q = shared.coord_shares(clean_urls=True)"
    ]
   },
   {
@@ -142,7 +142,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(f\"Coordination Time = {coordination_interval}\")"
+    "estadistics ,coord_time = shared.estimate_coord_interval(clean_urls=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(f\"Coordination time = {coord_time}\")"
    ]
   },
   {
