--- a/samples/pycoornet_example.ipynb
+++ b/samples/pycoornet_example.ipynb
@@ -123,7 +123,7 @@
    "outputs": [],
    "source": [
     "#Get links from crowdtangle\n",
-    "ct_df = crowd_tangle.get_shares(urls=links_df, url_column='clean_url', date_column='date',clean_urls=True, platforms='facebook', sleep_time=1)"
+    "ct_df = crowd_tangle.get_shares(urls=links_df, url_column='clean_url', date_column='date',clean_urls=True, platforms='facebook', max_calls = 2)"
    ]
   },
   {
