--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -155,4 +155,12 @@ url = {http://www.aaai.org/ocs/index.php/ICWSM/09/paper/view/154}
   url          = {https://tools.ietf.org/html/rfc1738},
 }
 
+@Misc{Neo4j2021,
+  author = {Neo4j},
+  month  = mar,
+  title  = {Neo4j Graph Database},
+  year   = {2021},
+  url    = {https://neo4j.com/},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
